# commerceconversiondashboard

./: .gitignore  Makefile  PORTFOLIO_CONTENT.md  README.md  pyproject.toml  run_app.sh
app/: app.py  lite_app.py  style.css
data/bundled/: datasets_manifest.json  online_shoppers_returning_focus.csv  online_shoppers_seasonal_focus.csv
reports/: executive_summary.md  model_card.md
scripts/: download_data.py  train_model.py
src/commerceconversiondashboard/: __init__.py  data.py  features.py  inference.py  metrics.py  modeling.py  paths.py  train.py
tests/: test_bundled_data.py  test_features.py  test_metrics.py
