[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commerceconversiondashboard"
version = "0.1.0"
description = "Commerce conversion dashboard with production-style ML pipeline and business analytics"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "UEA Data Science Student" }]
dependencies = [
  "numpy>=1.26.0",
  "pandas>=2.2.0",
  "scikit-learn>=1.5.0",
  "scipy>=1.12.0",
  "matplotlib>=3.8.0",
  "seaborn>=0.13.0",
  "plotly>=5.24.0",
  "streamlit>=1.37.0",
  "joblib>=1.4.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

testpaths = ["tests"]

[tool.ruff]
line-length = 100
lint.select = ["E", "F", "I", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
